auto-test/tests/chapter_18/invalid_struct_tags/cast_undeclared.c
int main(void) {
    
    
    
    (struct s)0;
    return 0;
}